make it work that opening model from FileDiag

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,8 +1,14 @@
 <RCC>
     <qresource prefix="/mesh">
-        <file>resources/TrackML-PixelDetector.obj</file>
-        <file>resources/left_part.obj</file>
-        <file>resources/middle_part.obj</file>
-        <file>resources/right_part.obj</file>
+        <file alias="Detector.obj">resources/mesh/TrackML-PixelDetector.obj</file>
+        <file alias="left_part.obj">resources/mesh/left_part.obj</file>
+        <file alias="middle_part.obj">resources/mesh/middle_part.obj</file>
+        <file alias="right_part.obj">resources/mesh/right_part.obj</file>
+    </qresource>
+    <qresource prefix="/db">
+        <file alias="box.db">resources/db/Step1_Box_Pixel_Brl1926A_BeamExtension.db</file>
+        <file alias="tube.db">resources/db/Step2_Tube_Pixel_Brl1720A_PST_Stiffner.db</file>
+        <file alias="tubs.db">resources/db/Step3_Tubs_Muon_JNSH_tx1stm_element3.db</file>
+        <file alias="pcon.db">resources/db/Step4_Pcon_LAr_Endcap_Cryostat_Cone_Mixed.db</file>
     </qresource>
 </RCC>
